--- a/src/components/sidebar/Sidebar.module.css
+++ b/src/components/sidebar/Sidebar.module.css
@@ -1,7 +1,7 @@
 .sidebar {
-  width: 8.5vw;
+  width: 130px;
   background-color: var(--color-limeish);
-  padding: 2rem 0.5rem;
+  padding: 4rem 0.5rem;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -9,8 +9,8 @@
 }
 
 .sidebarProfile {
-  width: 30px;
-  height: 30px;
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
   background-color: #ccc;
   display: flex;
@@ -33,5 +33,10 @@
   place-items: center;
   justify-items: center;
   display: flex;
-  margin-bottom: var(--sp-6);
+  margin-bottom: var(--sp-12);
+  margin-top: var(--sp-12);
+}
+
+li p {
+  font-size: var(--label);
 }
